# mockall-study

./: Cargo.toml  README.md
domain/: Cargo.toml
domain/src/: lib.rs
driver/: Cargo.toml
driver/src/: awesome_coffee_machine.rs  lib.rs
gateway/: Cargo.toml
gateway/src/: lib.rs
usecase/: Cargo.toml
usecase/src/port/: coffee_port.rs  mod.rs
