[package]
name = "gateway"
version = "0.0.0"
edition = "2021"

[dependencies]
async-trait = "0.1.53"
mockall = "0.11.0"
mockall_double = "0.3.0"
tokio = { version = "1.18.2", features = ["full"] }

# Internal
driver = { path = "../driver" }
usecase = { path = "../usecase" }
domain = { path = "../domain" }
